Player, Category, Ranking Saver 분리 Tournament분리 필요